Fiquring out how to do the anchor tag, is jumping to where i want but a little too much, need fixing

--- a/style/header.css
+++ b/style/header.css
@@ -33,7 +33,7 @@
 
 .linkedIn-button,
 .home-button,
-.about-button,
+.contact-button,
 .projects-button{
   align-items: center;
   display: flex;
